--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@
 .social-media li a.sm-facebook {width:10px; background:url(../img/icons/facebook.png) center center no-repeat;}
 .social-media li a.sm-rss {background:url(../img/icons/rss.png) center center no-repeat;}
 .social-media li a.sm-flickr {background:url(../img/icons/flickr.png) center center no-repeat;}
-.social-media li a.sm-windows {background:url(../img/icons/windows.png) center center no-repeat;}
-.social-media li a.sm-stumble {background:url(../img/icons/stumble.png) center center no-repeat;}
+.social-media li a.sm-pinterest {background:url(../img/icons/icon-pinterest_0.png) center center no-repeat;}
+.social-media li a.sm-youtube {background:url(../img/icons/youtube.png) center center no-repeat;}
 .social-media li a span {text-indent:-9999px; font-size:0; line-height:0;}
 .right-part {width:400px;}
 .top-link {float:right; line-height:14px; padding-right:15px; margin-right:15px; border-right:1px solid #292c2f;}
