--- a/css/colors/color1.css
+++ b/css/colors/color1.css
@@ -11,16 +11,16 @@
 .dropcap p:first-child:first-letter, .highlight,
 .list-style3 li:before, .list-style4 li:before,
 .pricing-table:hover, .pricing-table-featured, .pricing-table li.table-heading-multiple, .pricing-tables-2 .pricing-table li.table-heading-multiple:nth-child(2n+1), .pricing-tables-2 .pricing-table li.table-heading-multiple:nth-child(2n), .pricing-tables-2 .pricing-table li.table-heading, .pricing-tables-3 .pricing-table li.table-heading, .pricing-tables-2 .pricing-table li.table-heading-two{
-    background-color: #FFE200;
+    background-color: #ff845e;
 }
 
 
 #ft-footer a, #header-banner h1, .featured-cr, .tl-author-title, .breadcrumb a:hover, #main-menu li:hover > a {
-color: #FFE200; }
+color: #ff845e; }
 
 .btn-primary,
 .btn-primary:hover,
 .btn-primary:focus,
 #main-menu li ul{
-	border-color:  #FFE200;
+	border-color:  #ff845e;
 }
