--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@
 .search-submit {float:left; width:12px; height:14px; padding:0; margin:0; background:url(../img/icons/search.png) 0 center no-repeat; border:none;}
 
 /* main menu */
-#main-header {background:#000;}
+#main-header {background:#000;height:81px;}
 #site-logo {width:180px; height:80px;}
 #main-menu {float:right; margin:0; padding:0; }
 .main-nav span {display: none;}
@@ -125,7 +125,7 @@ blockquote strong {font-size:16px;}
 #content-slider {width:100%; height:600px; position:relative; overflow:hidden;}
 #content-slider ul {padding:0; list-style:none; position:relative;}
 #content-slider ul li {width:100%; position:absolute; top:0; left:0;}
-#slider-overlay {width:100%; height:500px; position:absolute; bottom:0; left:0; z-index:80; background:-moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))); background:-webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); background:-o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); background:-ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); background:linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);}
+#slider-overlay {width:100%; height:700px; position:absolute; bottom:0; left:0; z-index:80; background:-moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))); background:-webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); background:-o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); background:-ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); background:linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);}
 .slider-heading {margin:0; padding:0;}
 .caption-yellow, .caption-white, .caption-black {padding:5px 10px;}
 .caption-yellow {background:#ff845e;}
